src/test/deca/context/invalid/created/methodsCall/not_enougth_parameters.deca
// Description:
//      Appel d'une methode avec moins de parametres qu'attendu
// Resultats:
//      Erreur contexte Ligne 13 : Contextual error, the method called expected 1 arguments but 0 were given

class A {
    void f(int x){}
}

{
    int x = 8;
    A a = new A();
    a.f();
}